--- a/index.html
+++ b/index.html
@@ -544,15 +544,15 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <a href="https://en-gb.facebook.com/" target="_blank" type="text/html" hreflang="en"
+        <a href="https://en-gb.facebook.com/" target="_blank" type="text/html" hreflang="en" rel="noopener noreferrer"
           aria-label="Visit us on Meta">
           <i class="g-link icon icon-brand icon-meta" role="img" aria-label="Meta Icon"></i>
         </a>
-        <a href="https://twitter.com/?lang=en" target="_blank" type="text/html" hreflang="en"
+        <a href="https://twitter.com/?lang=en" target="_blank" type="text/html" hreflang="en" rel="noopener noreferrer"
           aria-label="Visit us on X(Twitter)">
           <i class="g-link icon icon-brand icon-twitter" role="img" aria-label="X (Twitter) Icon"></i>
         </a>
-        <a href="https://www.instagram.com/" target="_blank" type="text/html" hreflang="en"
+        <a href="https://www.instagram.com/" target="_blank" type="text/html" hreflang="en" rel="noopener noreferrer"
           aria-label="Visit us on Instagram">
           <i class="g-link icon icon-brand icon-instagram" role="img" aria-label="Instagram Icon"></i>
         </a>
