amended color on focus and default form

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 <span class="reservation__message__close-button" role="button" tabindex="0">&times;</span>
               </header>
               <p>Please confirm the following details:</p>
-              <ul class="reservation__message-list">
+              <ul class="reservation__message-list" tabindex="0">
                 <li>Name:</li>
                 <li id="name-value"></li>
                 <li>Phone Number:</li>
