try to make the date in safari to left

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
       <!-- Reservation -->
       <section id="reservation" aria-label="reservation">
-        <h2>RESERVATIONoooooooooooooo</h2>
+        <h2>RESERVATION</h2>
         <div class="reservation">
           <!-- reservation photo -->
           <div class="reservation__photo">
