--- a/index.html
+++ b/index.html
@@ -435,10 +435,13 @@
           <div class="reservation__message-container" id="reservation-message">
             <div class="reservation__message-content">
               <header>
+                <p class="reservation__message__timer">This message box will close in <span
+                    id="message-timer">15:00</span>.
+                </p>
                 <h3>Booking Summary</h3>
                 <span class="reservation__message__close-button" role="button" tabindex="0">&times;</span>
               </header>
-              <p>Please confirm the following details:</p>
+              <p class="reservation__message__paragraph2">Please confirm the following details:</p>
               <ul class="reservation__message-list" tabindex="0">
                 <li>Name:</li>
                 <li id="name-value"></li>
