sorting of code in pop up message to relevant parts

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </noscript> -->
 
 
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
@@ -62,13 +62,13 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script>
 
 
 
 
 
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -78,7 +78,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js"></script> -->
 
 </head>
 
@@ -449,7 +449,7 @@
                 <h3>Booking Summary</h3>
                 <span class="reservation__confirmation-message__close-button" role="button" tabindex="0">&times;</span>
               </header>
-              <p class="reservation__confirmation-message__paragraph">Please confirm the following details:</p>
+              <p>Please confirm the following details:</p>
               <ul class="reservation__confirmation-message__list" tabindex="0">
                 <li>Name:</li>
                 <li id="name-value"></li>
@@ -464,7 +464,7 @@
                 <li>Time:</li>
                 <li id="time-value"></li>
                 <li>Message / Special Request:</li>
-                <li id="message-value"></li>
+                <li id="optional-message-value"></li>
               </ul>
               <div class="reservation__confirmation-message__bottom-buttons">
                 <button type="button"
