crappy progress bar

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </noscript> -->
 
 
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
@@ -62,13 +62,13 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script>
 
 
 
 
 
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -78,7 +78,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js"></script> -->
 
 </head>
 
@@ -331,60 +331,57 @@
             </div>
 
             <!-- Next and previous buttons -->
-            <button class="carousel__button carousel__button--prev" onclick="plusSlides(-1)" type="button"
-              aria-label="previous slide" aria-controls="carousel__track">&#10094;</button>
-            <button class="carousel__button carousel__button--next" onclick="plusSlides(1)" type="button"
-              aria-label="next slide" aria-controls="carousel__track">&#10095;</button>
+            <button class="carousel__prev-button" onclick="plusSlides(-1)" type="button" aria-label="previous slide"
+              aria-controls="carousel__track">&#10094;</button>
+            <button class="carousel__next-button" onclick="plusSlides(1)" type="button" aria-label="next slide"
+              aria-controls="carousel__track">&#10095;</button>
+          </div>
+
+          <div class="carousel__bottom-control">
+            <!-- Play and pause buttons -->
+            <button type="button" class="carousel__pause-button" aria-label="Slider control - Pause"
+              aria-hidden="false">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M6 2.8C5.33726 2.8 4.8 3.33726 4.8 4V20C4.8 20.6627 5.33726 21.2 6 21.2H10C10.6627 21.2 11.2 20.6627 11.2 20V4C11.2 3.33726 10.6627 2.8 10 2.8H6ZM7.2 18.8V5.2H8.8V18.8H7.2ZM14 2.8C13.3373 2.8 12.8 3.33726 12.8 4V20C12.8 20.6627 13.3373 21.2 14 21.2H18C18.6627 21.2 19.2 20.6627 19.2 20V4C19.2 3.33726 18.6627 2.8 18 2.8H14ZM15.2 18.8V5.2H16.8V18.8H15.2Z"
+                  fill="#c38154" stroke="#c38154" stroke-width="0.4" stroke-linecap="round" stroke-linejoin="round">
+                </path>
+              </svg>
+            </button>
+            <button type="button" class="carousel__play-button hidden" aria-label="Slider control - Play"
+              aria-hidden="true">
+              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M5.64891 1.99059C5.27966 1.75321 4.81026 1.7364 4.42497 1.94675C4.03969 2.15709 3.8 2.56103 3.8 3V21C3.8 21.439 4.03969 21.8429 4.42497 22.0533C4.81026 22.2636 5.27966 22.2468 5.64891 22.0094L19.6489 13.0094C19.9924 12.7886 20.2 12.4083 20.2 12C20.2 11.5917 19.9924 11.2114 19.6489 10.9906L5.64891 1.99059ZM6.2 5.198L16.7809 12L6.2 18.802V5.198Z"
+                  fill="#c38154" stroke="#c38154" stroke-width="0.4" stroke-linecap="round" stroke-linejoin="round">
+                </path>
+              </svg>
+            </button>
+            <!-- Dynamic progress bar -->
+            <button class="carousel__progress-container current-container" onclick="currentSlide(1)" type="button"
+              role="tab" aria-label="Slide 1" aria-controls="slide1">
+              <div class="carousel__progress-bar current-bar">&nbsp;</div>
+            </button>
+            <button class="carousel__progress-container" onclick="currentSlide(2)" type="button" role="tab"
+              aria-label="Slide 2" aria-controls="slide2">
+              <div class="carousel__progress-bar">&nbsp;</div>
+            </button>
+            <button class="carousel__progress-container" onclick="currentSlide(3)" type="button" role="tab"
+              aria-label="Slide 3" aria-controls="slide3">
+              <div class="carousel__progress-bar">&nbsp;</div>
+            </button>
           </div>
 
           <!-- The dots/circles -->
-          <div class="carousel__dots" role="tablist" aria-label="Slides">
-            <button class="carousel__dot" onclick="currentSlide(1)" type="button" role="tab" aria-label="Slide 1"
+          <!-- <div class="carousel__progress-group" role="tablist" aria-label="Slides">
+            <button class="carousel__progress" onclick="currentSlide(1)" type="button" role="tab" aria-label="Slide 1"
               aria-controls="slide1"></button>
-            <button class="carousel__dot" onclick="currentSlide(2)" type="button" role="tab" aria-label="Slide 2"
+            <button class="carousel__progress" onclick="currentSlide(2)" type="button" role="tab" aria-label="Slide 2"
               aria-controls="slide2"></button>
-            <button class="carousel__dot" onclick="currentSlide(3)" type="button" role="tab" aria-label="Slide 3"
+            <button class="carousel__progress" onclick="currentSlide(3)" type="button" role="tab" aria-label="Slide 3"
               aria-controls="slide3"></button>
-          </div>
-
-          <!-- <div class="carousel__dots" role="tablist" aria-label="Slides">
-            <div class="Controller-module_playPauseButtonContainer__NeFRm">
-              <button type="button" aria-label="Slider control - Pause">
-                <div
-                  style="display: contents; flex-direction: column; overflow: hidden; height: initial; width: initial;">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M6 2.8C5.33726 2.8 4.8 3.33726 4.8 4V20C4.8 20.6627 5.33726 21.2 6 21.2H10C10.6627 21.2 11.2 20.6627 11.2 20V4C11.2 3.33726 10.6627 2.8 10 2.8H6ZM7.2 18.8V5.2H8.8V18.8H7.2ZM14 2.8C13.3373 2.8 12.8 3.33726 12.8 4V20C12.8 20.6627 13.3373 21.2 14 21.2H18C18.6627 21.2 19.2 20.6627 19.2 20V4C19.2 3.33726 18.6627 2.8 18 2.8H14ZM15.2 18.8V5.2H16.8V18.8H15.2Z"
-                      fill="white" stroke="#3C4C49" stroke-width="0.4" stroke-linecap="round" stroke-linejoin="round">
-                    </path>
-                  </svg>
-                </div>
-              </button>
-              <button type="button" aria-label="Slider control - Play">
-                <div
-                  style="display: contents; flex-direction: column; overflow: hidden; height: initial; width: initial;">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M5.64891 1.99059C5.27966 1.75321 4.81026 1.7364 4.42497 1.94675C4.03969 2.15709 3.8 2.56103 3.8 3V21C3.8 21.439 4.03969 21.8429 4.42497 22.0533C4.81026 22.2636 5.27966 22.2468 5.64891 22.0094L19.6489 13.0094C19.9924 12.7886 20.2 12.4083 20.2 12C20.2 11.5917 19.9924 11.2114 19.6489 10.9906L5.64891 1.99059ZM6.2 5.198L16.7809 12L6.2 18.802V5.198Z"
-                      fill="white" stroke="#3C4C49" stroke-width="0.4" stroke-linecap="round" stroke-linejoin="round">
-                    </path>
-                  </svg>
-                </div>
-              </button>
-            </div>
-            <button class="carousel__dot" onclick="currentSlide(1)" type="button" role="tab" aria-label="Slide 1"
-              aria-controls="slide1">
-              <div class="ProgressItem-module_curtainFeature__qe6oj" style="transform: translateX(100%);">&nbsp;</div>
-            </button>
-            <button class="carousel__dot" onclick="currentSlide(2)" type="button" role="tab" aria-label="Slide 2"
-              aria-controls="slide2">
-              <div class="ProgressItem-module_curtainFeature__qe6oj" style="transform: translateX(0%);">&nbsp;</div>
-            </button>
-            <button class="carousel__dot" onclick="currentSlide(3)" type="button" role="tab" aria-label="Slide 3"
-              aria-controls="slide3">
-              <div class="ProgressItem-module_curtainFeature__qe6oj" style="transform: translateX(0%);">&nbsp;</div>
-            </button>
           </div> -->
+          <!-- </div> -->
         </div>
       </section>
 
