added variable j to func

--- a/index.html
+++ b/index.html
@@ -360,15 +360,15 @@
             <!-- Dynamic progress bar -->
             <button class="carousel__progress-container current-container" onclick="currentSlide(1)" type="button"
               role="tab" aria-label="Slide 1" aria-controls="slide1">
-              <div class="carousel__progress-bar current-bar">&nbsp;</div>
+              <div class="carousel__progress-bar" id="slide1Bar" current-bar>&nbsp;</div>
             </button>
             <button class="carousel__progress-container" onclick="currentSlide(2)" type="button" role="tab"
               aria-label="Slide 2" aria-controls="slide2">
-              <div class="carousel__progress-bar">&nbsp;</div>
+              <div class="carousel__progress-bar" id="slide2Bar">&nbsp;</div>
             </button>
             <button class="carousel__progress-container" onclick="currentSlide(3)" type="button" role="tab"
               aria-label="Slide 3" aria-controls="slide3">
-              <div class="carousel__progress-bar">&nbsp;</div>
+              <div class="carousel__progress-bar" id="slide3Bar">&nbsp;</div>
             </button>
           </div>
 
